Changed gitignore settings / added other shapes back into cmake proj

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 *.exe
 *.out
 *.app
+
+Ex3_Chrispens_Gahbiche/\.DS_Store
+
+Ex3_Chrispens_Gahbiche/\.idea/
+
+Ex3_Chrispens_Gahbiche/cmake-build-debug/
