--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ Ex3_Chrispens_Gahbiche/\.DS_Store
 Ex3_Chrispens_Gahbiche/\.idea/
 
 Ex3_Chrispens_Gahbiche/cmake-build-debug/
+
+\.DS_Store
+
+Ex4_Chrispens_Gahbiche/cmake-build-debug/
+
+Ex4_Chrispens_Gahbiche/\.idea/
