--- a/Ex4_Chrispens_Gahbiche/CMakeLists.txt
+++ b/Ex4_Chrispens_Gahbiche/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Ex4_Chrispens_Gahbiche)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(CMAKE_CXX_STANDARD 14)
+set(CXX_STANDARD_REQUIRED ON)
 
 set(SOURCE_FILES main.cpp Polygon.cpp Polygon.h)
 add_executable(Ex4 ${SOURCE_FILES})
