srand removed - started with transform_reduce()

--- a/Ex4_Chrispens_Gahbiche/CMakeLists.txt
+++ b/Ex4_Chrispens_Gahbiche/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(CMAKE_CXX_STANDARD 14)
 set(CXX_STANDARD_REQUIRED ON)
 
-set(SOURCE_FILES main.cpp Polygon.h Point.cpp Point.h sum_circumference.h)
+set(SOURCE_FILES main.cpp Polygon.h Point.cpp Point.h sum_circumference.h transform_reduce.h)
 add_executable(Ex4 ${SOURCE_FILES})
