git ignore changed

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ Ex3_Chrispens_Gahbiche/cmake-build-debug/
 Ex4_Chrispens_Gahbiche/cmake-build-debug/
 
 Ex4_Chrispens_Gahbiche/\.idea/
+
+Ex5_Chrispens_Gahbiche/\.idea/workspace\.xml
+
+Ex5_Chrispens_Gahbiche/cmake-build-debug/
