fixed bug in producer 1

--- a/Ex5_Chrispens_Gahbiche/CMakeLists.txt
+++ b/Ex5_Chrispens_Gahbiche/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(Ex5_Chrispens_Gahbiche)
 
+#set(CXX_CXX_COMPILER /usr/local/bin/g++-7)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CXX_STANDARD_REQUIRED ON)
 
